@@ -1,4 +1,6 @@
 4.5 -> 5.0:
+    - jbj: move (largely unused) fileTypes into rpmfi.h
+    - jbj: remove whatis() from rpmlib, use S_ISFOO() instead.
     - jbj: ensure that PLD setup & FHS packages install correctly.
     - jbj: wrapper for open(2).
     - rpm.org: ensure that yum's broken transaction checks "work" (#259961).
